--- a/decode.css
+++ b/decode.css
@@ -1,44 +1,57 @@
 hr{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    max-width: 1600px;
-    width: 90%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  max-width: 1600px;
+  width: 90%;
 }
-#textField, #stopwatch{
-    color: white;
-    font-size: 100px;
-    text-align: center;
+#textField, #stopwatch, #tlumaczenie{
+  color: white;
+  font-size: 30px;
+  text-align: center;
 }
 .slidecontainer {
-    width: 100%; 
-  }
+  width: 100%; 
+}
 .slider {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 15px;
-    border-radius: 5px;  
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-  }
-  .slider:hover {
-    opacity: 1; 
-  }
-  .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%; 
-    background: #0090c0;
-    cursor: pointer;
-  }
-  .slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #0090c0;
-    cursor: pointer;
-  }
+  -webkit-appearance: none;
+  width: 100%;
+  height: 20px;
+  border-radius: 5px;  
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+.slider:hover {
+  opacity: 1; 
+}
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%; 
+  background: #1a1a1a;
+  cursor: pointer;
+}
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #272727;
+  cursor: pointer;
+}
+.sliderek{
+  position: absolute;
+  top: 70vh;
+  color: white;
+  width: 25%;
+}
+.sliderek p{
+  font-size: 30px;
+  padding: 20px;
+  text-align: center;
+  color: white;
+  background-color: rgb(27, 27, 27);
+}
